--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   http: ^1.4.0
+  flutter_background_service: ^5.1.0
 
 dev_dependencies:
   flutter_test:
